--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 body{
-    color: greys;
+    color: grey;
     background-color: #FFFFFF;
     font-family: 'Montserrat', sans-serif;
 }
 
 .carousel .carousel-item {
-    height: 300px;
+    height: 500px;
   }
   
   .carousel-item img {
       position: absolute;
       top: 0;
       left: 0;
-      min-height: 300px;
+      min-height: 500px;
   }
 a.nav-link{
     text-decoration: none;
@@ -28,7 +28,7 @@ a.button3{
     font-family:'Roboto',sans-serif;
     font-weight:300;
     color:#FFFFFF;
-    background-color:#4eb5f1;
+    background-color:grey;
     text-align:center;
     transition: all 0.2s;
     }
@@ -43,4 +43,8 @@ a.button3{
 } 
 .cards{
 padding: 20px;
+}
+.titulo-grande,
+ .texto-carrusel{
+    color: white;
 }
